cards gone, not appearing

--- a/card.html
+++ b/card.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="card.css">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"> -->
     <title>Document</title>
+    <link rel="stylesheet" href="card.css">
     <script src="card.js" defer></script>
 </head>
 
@@ -34,6 +33,8 @@
         <label for="nightMode">NightMode</label>
         <input type="checkbox" name="nightMode" id="1nightMode">
     </div>
+    <h2>Poof and disappear</h2>
+    <input type="button" value="button" id="disappear">
 </body>
 
 </html>
