--- a/js/cao/cao.html
+++ b/js/cao/cao.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-    <!-- <h1 class="name">Rokas</h1> -->
+    <!-- <h1 class="name">Rokas</h1>
     <button class="movingBtnTopLeft">Opce sukames</button>
+    <input type="text" name="text" id="text"><br> -->
+    <button id="randomColorBtn">Random Color</button>
 </body>
 
 </html>
