--- a/js/cao/cao.html
+++ b/js/cao/cao.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"> -->
     <title>cao</title>
     <script src="cao.js" defer></script>
 </head>
 
 <body>
-    <!-- <h1 class="name">Rokas</h1>
-    <button class="movingBtnTopLeft">Opce sukames</button>
-    <input type="text" name="text" id="text"><br> -->
+    <h1 class="name">Rokas</h1>
+    <button class="movingBtnTopLeft">Opce</button>
+    <input type="text" name="text" id="text"><br>
     <button id="randomColorBtn">Random Color</button>
 </body>
 
