--- a/card.html
+++ b/card.html
@@ -33,7 +33,7 @@
         <label for="nightMode">NightMode</label>
         <input type="checkbox" name="nightMode" id="1nightMode">
     </div>
-    <h2>Poof and disappear</h2>
+    <h2>Poof</h2>
     <input type="button" value="button" id="disappear">
 </body>
 
